# cuddly-guacamole

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
k8s/: README.md  deployment.yaml  service.yaml
research/: README.md  draw.py
scripts/: start.sh
server/: README.md  main.py
server/static/: index.html
